microservices/scenarios/istio/header-routing-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - inventory
  http:
  - match:
    - headers:
        msa-version:
          exact: v2
    route:
    - destination:
        host: inventory
        subset: version-v2
  - route:
    - destination:
        host: inventory
        subset: version-v1
