microservices/scenarios/istio/inventory-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory
spec:
  host: inventory
  subsets:
  - name: version-v1
    labels:
      version: 1.0.0
